@@ -1,15 +1,15 @@
 package com.cumpleanos.meta.service.implementation;
 
-import com.cumpleanos.meta.persistence.models.Change;
-import com.cumpleanos.meta.persistence.models.Text;
-import com.cumpleanos.meta.persistence.models.WebhookPayLoad;
-import com.cumpleanos.meta.persistence.models.request.Context;
-import com.cumpleanos.meta.persistence.models.request.SendMessageRequest;
+import com.cumpleanos.meta.configuration.properties.WhatsappProperties;
+import com.cumpleanos.meta.persistence.models.whatsapp.Change;
+import com.cumpleanos.meta.persistence.models.whatsapp.Text;
+import com.cumpleanos.meta.persistence.models.whatsapp.WebhookPayLoad;
+import com.cumpleanos.meta.persistence.models.whatsapp.request.Context;
+import com.cumpleanos.meta.persistence.models.whatsapp.request.SendMessageRequest;
 import com.cumpleanos.meta.service.http.WhatsappClient;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.PropertySource;
 import org.springframework.stereotype.Service;
 
@@ -21,9 +21,7 @@ import java.util.Map;
 @Slf4j
 public class WebhookServiceImpl {
 
-    @Value("${graph.api.token}")
-    String graphApiToken;
-
+    private final WhatsappProperties prop;
     private final WhatsappClient whatsappClient;
 
     public void processIncomingMessage(WebhookPayLoad payload) {
@@ -36,7 +34,7 @@ public class WebhookServiceImpl {
                 .orElse(null);
 
         if (message != null && "text".equals(message.type())) {
-            var phoneNumberId = payload.entry().get(0).changes().get(0).value().metadata().phone_number_id();
+            var phoneNumberId = payload.entry().getFirst().changes().getFirst().value().metadata().phone_number_id();
 
             var replyMessage = new SendMessageRequest(
                     "whatsapp",
@@ -44,7 +42,7 @@ public class WebhookServiceImpl {
                     new Text("Echo:" + message.text().body()),
                     new Context(message.id())
             );
-            whatsappClient.sendMessage("Bearer "+graphApiToken, replyMessage , phoneNumberId);
+            whatsappClient.sendMessage("Bearer "+prop.getGraphApiToken(), replyMessage , phoneNumberId);
 
             markMessageAsRead(phoneNumberId, message.id());
         }
@@ -56,6 +54,6 @@ public class WebhookServiceImpl {
                 "status", "read",
                 "message_id", messageId
         );
-        whatsappClient.sendMessage("Bearer "+ graphApiToken,markAsReadRequest, phoneNumberId);
+        whatsappClient.sendMessage("Bearer "+ prop.getGraphApiToken(),markAsReadRequest, phoneNumberId);
     }
 }
